--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@ package="com.fuh.newsapp.android">
     android:name=".NewsApp"
     android:allowBackup="false"
     android:hardwareAccelerated="true"
-    android:label="Kmm News"
+    android:label="Corent"
     android:largeHeap="true"
     android:requestLegacyExternalStorage="true"
     android:supportsRtl="true"
